crates/ditto-checker/tests/golden/type-errors/duplicate_import_module_0.ditto
module Test exports (..)

import (test-stuff) Data.Stuff
import Data.Stuff
